--- a/s33-final-artist-npm/src/style.css
+++ b/s33-final-artist-npm/src/style.css
@@ -41,8 +41,10 @@ html,
   /* 1 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
+  -moz-tab-size: 4;
   /* 3 */
-  tab-size: 4;
+  -o-tab-size: 4;
+     tab-size: 4;
   /* 3 */
   font-family: Roboto, sans-serif;
   /* 4 */
@@ -376,6 +378,13 @@ textarea {
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
 
+input::-moz-placeholder, textarea::-moz-placeholder {
+  opacity: 1;
+  /* 1 */
+  color: #bdbdbd;
+  /* 2 */
+}
+
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
@@ -679,7 +688,6 @@ video {
 }
 
 .sticky {
-  position: -webkit-sticky;
   position: sticky;
 }
 
@@ -1156,7 +1164,7 @@ video {
 }
 
 .h-max {
-  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
 }
 
@@ -1301,16 +1309,12 @@ video {
 }
 
 .w-max {
-  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
 }
 
 .w-screen {
   width: 100vw;
-}
-
-.w-1 {
-  width: 0.25rem;
 }
 
 .w-60 {
@@ -1518,11 +1522,13 @@ video {
 
 .select-none {
   -webkit-user-select: none;
+     -moz-user-select: none;
           user-select: none;
 }
 
 .select-all {
   -webkit-user-select: all;
+     -moz-user-select: all;
           user-select: all;
 }
 
@@ -1544,6 +1550,7 @@ video {
 
 .appearance-none {
   -webkit-appearance: none;
+     -moz-appearance: none;
           appearance: none;
 }
 
@@ -2618,11 +2625,13 @@ video {
 }
 
 .object-cover {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .object-center {
-  object-position: center;
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-0 {
@@ -3338,23 +3347,19 @@ video {
 }
 
 .underline {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 .overline {
-  -webkit-text-decoration-line: overline;
-          text-decoration-line: overline;
+  text-decoration-line: overline;
 }
 
 .line-through {
-  -webkit-text-decoration-line: line-through;
-          text-decoration-line: line-through;
+  text-decoration-line: line-through;
 }
 
 .no-underline {
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
+  text-decoration-line: none;
 }
 
 .antialiased {
@@ -3721,17 +3726,17 @@ video {
 }
 
 .\!transition {
-  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter !important;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter !important;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter !important;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter !important;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter !important;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
   transition-duration: 150ms !important;
 }
 
 .transition {
-  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -3743,9 +3748,7 @@ video {
 }
 
 .transition-colors {
-  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -3813,6 +3816,10 @@ video {
 
 .\[vite\:html\] {
   vite: html;
+}
+
+.placeholder\:opacity-0::-moz-placeholder {
+  opacity: 0;
 }
 
 .placeholder\:opacity-0::placeholder {
@@ -4734,8 +4741,17 @@ video {
   background-color: rgb(255 235 59 / var(--tw-bg-opacity));
 }
 
+.placeholder-shown\:border:-moz-placeholder-shown {
+  border-width: 1px;
+}
+
 .placeholder-shown\:border:placeholder-shown {
   border-width: 1px;
+}
+
+.placeholder-shown\:border-blue-gray-200:-moz-placeholder-shown {
+  --tw-border-opacity: 1;
+  border-color: rgb(176 190 197 / var(--tw-border-opacity));
 }
 
 .placeholder-shown\:border-blue-gray-200:placeholder-shown {
@@ -4743,9 +4759,19 @@ video {
   border-color: rgb(176 190 197 / var(--tw-border-opacity));
 }
 
+.placeholder-shown\:border-green-500:-moz-placeholder-shown {
+  --tw-border-opacity: 1;
+  border-color: rgb(76 175 80 / var(--tw-border-opacity));
+}
+
 .placeholder-shown\:border-green-500:placeholder-shown {
   --tw-border-opacity: 1;
   border-color: rgb(76 175 80 / var(--tw-border-opacity));
+}
+
+.placeholder-shown\:border-red-500:-moz-placeholder-shown {
+  --tw-border-opacity: 1;
+  border-color: rgb(244 67 54 / var(--tw-border-opacity));
 }
 
 .placeholder-shown\:border-red-500:placeholder-shown {
@@ -4753,14 +4779,29 @@ video {
   border-color: rgb(244 67 54 / var(--tw-border-opacity));
 }
 
+.placeholder-shown\:border-t-blue-gray-200:-moz-placeholder-shown {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(176 190 197 / var(--tw-border-opacity));
+}
+
 .placeholder-shown\:border-t-blue-gray-200:placeholder-shown {
   --tw-border-opacity: 1;
   border-top-color: rgb(176 190 197 / var(--tw-border-opacity));
 }
 
+.placeholder-shown\:border-t-green-500:-moz-placeholder-shown {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(76 175 80 / var(--tw-border-opacity));
+}
+
 .placeholder-shown\:border-t-green-500:placeholder-shown {
   --tw-border-opacity: 1;
   border-top-color: rgb(76 175 80 / var(--tw-border-opacity));
+}
+
+.placeholder-shown\:border-t-red-500:-moz-placeholder-shown {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(244 67 54 / var(--tw-border-opacity));
 }
 
 .placeholder-shown\:border-t-red-500:placeholder-shown {
@@ -4883,8 +4924,7 @@ video {
 }
 
 .hover\:underline:hover {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 .hover\:opacity-75:hover {
@@ -5282,6 +5322,10 @@ video {
   --tw-ring-color: rgb(255 245 157 / var(--tw-ring-opacity));
 }
 
+.focus\:placeholder\:opacity-100:focus::-moz-placeholder {
+  opacity: 1;
+}
+
 .focus\:placeholder\:opacity-100:focus::placeholder {
   opacity: 1;
 }
@@ -5654,29 +5698,59 @@ video {
   background-color: rgb(255 235 59 / var(--tw-bg-opacity));
 }
 
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .peer:placeholder-shown ~ .peer-placeholder-shown\:text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:leading-\[3\.75\] {
+  line-height: 3.75;
 }
 
 .peer:placeholder-shown ~ .peer-placeholder-shown\:leading-\[3\.75\] {
   line-height: 3.75;
 }
 
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:leading-\[4\.1\] {
+  line-height: 4.1;
+}
+
 .peer:placeholder-shown ~ .peer-placeholder-shown\:leading-\[4\.1\] {
   line-height: 4.1;
+}
+
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:leading-\[4\.25\] {
+  line-height: 4.25;
 }
 
 .peer:placeholder-shown ~ .peer-placeholder-shown\:leading-\[4\.25\] {
   line-height: 4.25;
 }
 
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:leading-\[4\.875\] {
+  line-height: 4.875;
+}
+
 .peer:placeholder-shown ~ .peer-placeholder-shown\:leading-\[4\.875\] {
   line-height: 4.875;
 }
 
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:leading-tight {
+  line-height: 1.25;
+}
+
 .peer:placeholder-shown ~ .peer-placeholder-shown\:leading-tight {
   line-height: 1.25;
+}
+
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:text-blue-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(96 125 139 / var(--tw-text-opacity));
 }
 
 .peer:placeholder-shown ~ .peer-placeholder-shown\:text-blue-gray-500 {
@@ -5684,9 +5758,19 @@ video {
   color: rgb(96 125 139 / var(--tw-text-opacity));
 }
 
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(76 175 80 / var(--tw-text-opacity));
+}
+
 .peer:placeholder-shown ~ .peer-placeholder-shown\:text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(76 175 80 / var(--tw-text-opacity));
+}
+
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(244 67 54 / var(--tw-text-opacity));
 }
 
 .peer:placeholder-shown ~ .peer-placeholder-shown\:text-red-500 {
@@ -5694,7 +5778,17 @@ video {
   color: rgb(244 67 54 / var(--tw-text-opacity));
 }
 
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:before\:border-transparent::before {
+  content: var(--tw-content);
+  border-color: transparent;
+}
+
 .peer:placeholder-shown ~ .peer-placeholder-shown\:before\:border-transparent::before {
+  content: var(--tw-content);
+  border-color: transparent;
+}
+
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:after\:border-transparent::after {
   content: var(--tw-content);
   border-color: transparent;
 }
@@ -6257,6 +6351,11 @@ video {
   border-color: transparent;
 }
 
+.peer:disabled:-moz-placeholder-shown ~ .peer-disabled\:peer-placeholder-shown\:text-blue-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(96 125 139 / var(--tw-text-opacity));
+}
+
 .peer:disabled:placeholder-shown ~ .peer-disabled\:peer-placeholder-shown\:text-blue-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(96 125 139 / var(--tw-text-opacity));
@@ -6465,7 +6564,8 @@ video {
 }
 
 .\[\&\:\:-moz-range-thumb\]\:appearance-none::-moz-range-thumb {
-  appearance: none;
+  -moz-appearance: none;
+       appearance: none;
 }
 
 .\[\&\:\:-moz-range-thumb\]\:rounded-full::-moz-range-thumb {
