--- a/s33-final-artist-npm/src/style.css
+++ b/s33-final-artist-npm/src/style.css
@@ -699,6 +699,11 @@ video {
   inset: 0px;
 }
 
+.inset-y-1\/2 {
+  top: 50%;
+  bottom: 50%;
+}
+
 .-left-1 {
   left: -0.25rem;
 }
@@ -831,6 +836,10 @@ video {
   top: 4%;
 }
 
+.top-\[1\/2vh\] {
+  top: 1/2vh;
+}
+
 .isolate {
   isolation: isolate;
 }
@@ -941,6 +950,18 @@ video {
 
 .m-56 {
   margin: 14rem;
+}
+
+.m-\[10px\] {
+  margin: 10px;
+}
+
+.m-\[20px\] {
+  margin: 20px;
+}
+
+.m-\[30px\] {
+  margin: 30px;
 }
 
 .mx-2 {
@@ -1266,10 +1287,6 @@ video {
   height: 74px;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .h-full {
   height: 100%;
 }
@@ -1281,6 +1298,42 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[450px\] {
+  height: 450px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[750px\] {
+  height: 750px;
+}
+
+.h-\[770px\] {
+  height: 770px;
+}
+
+.h-\[780px\] {
+  height: 780px;
+}
+
+.h-\[790px\] {
+  height: 790px;
 }
 
 .max-h-96 {
@@ -1436,6 +1489,10 @@ video {
   width: 100vw;
 }
 
+.w-\[60\%\] {
+  width: 60%;
+}
+
 .min-w-\[100vw\] {
   min-width: 100vw;
 }
@@ -1514,6 +1571,10 @@ video {
 
 .max-w-screen-2xl {
   max-width: 1320px;
+}
+
+.max-w-none {
+  max-width: none;
 }
 
 .flex-none {
@@ -1614,6 +1675,11 @@ video {
 
 .rotate-180 {
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2923,6 +2989,11 @@ video {
   border-color: rgb(255 235 59 / var(--tw-border-opacity));
 }
 
+.border-deep-orange-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(191 54 12 / var(--tw-border-opacity));
+}
+
 .\!border-t-transparent {
   border-top-color: transparent !important;
 }
@@ -3484,6 +3555,10 @@ video {
           box-decoration-break: clone;
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
 .bg-fixed {
   background-attachment: fixed;
 }
@@ -3511,6 +3586,10 @@ video {
 .bg-clip-text {
   -webkit-background-clip: text;
           background-clip: text;
+}
+
+.bg-center {
+  background-position: center;
 }
 
 .bg-repeat {
@@ -3619,6 +3698,14 @@ video {
   padding: 50px;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -3694,6 +3781,21 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .\!pr-7 {
   padding-right: 1.75rem !important;
 }
@@ -3734,10 +3836,6 @@ video {
   padding-top: 1.25rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .pt-\[75px\] {
   padding-top: 75px;
 }
@@ -3750,8 +3848,24 @@ video {
   padding-top: 1px;
 }
 
+.pt-\[70px\] {
+  padding-top: 70px;
+}
+
 .pt-\[65px\] {
   padding-top: 65px;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pt-\[62px\] {
+  padding-top: 62px;
+}
+
+.pt-\[60px\] {
+  padding-top: 60px;
 }
 
 .text-left {
@@ -3964,10 +4078,6 @@ video {
   line-height: 1.25 !important;
 }
 
-.leading-7 {
-  line-height: 1.75rem;
-}
-
 .leading-\[1\.3\] {
   line-height: 1.3;
 }
@@ -4006,6 +4116,10 @@ video {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.leading-7 {
+  line-height: 1.75rem;
 }
 
 .tracking-normal {
@@ -4299,11 +4413,6 @@ video {
   color: rgb(211 47 47 / var(--tw-text-opacity));
 }
 
-.text-red-800 {
-  --tw-text-opacity: 1;
-  color: rgb(198 40 40 / var(--tw-text-opacity));
-}
-
 .text-red-900 {
   --tw-text-opacity: 1;
   color: rgb(183 28 28 / var(--tw-text-opacity));
@@ -4346,6 +4455,11 @@ video {
 .text-yellow-900 {
   --tw-text-opacity: 1;
   color: rgb(245 127 23 / var(--tw-text-opacity));
+}
+
+.text-red-800 {
+  --tw-text-opacity: 1;
+  color: rgb(198 40 40 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -6202,6 +6316,11 @@ video {
 .hover\:text-light-blue-500:hover {
   --tw-text-opacity: 1;
   color: rgb(3 169 244 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(33 150 243 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
